--- a/frontendfile/package.json
+++ b/frontendfile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
@@ -19,10 +20,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.0",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.77.1",
     "vite": "^5.0.8"
   }
 }
